--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,8 @@
-
-
+/* Main stylesheet */
 .tab-pane .tab-header-area .tab-header-background {
     -fx-background-color: #202225;
     -fx-effect: null;
 }
-
 
 .tab-pane .tab-header-area .tab  {
     -fx-background-color: #36393f;
