--- a/src/views/offerListItem.fxml
+++ b/src/views/offerListItem.fxml
@@ -6,7 +6,7 @@
 
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
-<AnchorPane prefHeight="100.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OfferListItemCtrl" onMouseClicked="#offerSelected">
+<AnchorPane prefHeight="100.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OfferListItemCtrl">
    <children>
       <HBox>
          <Separator/>
