bug fixes, added tree

--- a/src/views/shapeEdit.fxml
+++ b/src/views/shapeEdit.fxml
@@ -103,6 +103,7 @@
                                <PointType fx:value="SHOP" />
                                <PointType fx:value="WIFI" />
                                <PointType fx:value="CHURCH" />
+                               <PointType fx:value="TREE" />
                            </FXCollections>
                        </items>
                        <padding>
