--- a/src/views/offerListItem.fxml
+++ b/src/views/offerListItem.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="100.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OfferListItemCtrl">
    <children>
-      <HBox>
+      <HBox styleClass="resultBox">
          <Separator/>
          <ImageView fx:id="picture" id="titlePic" fitHeight="100" preserveRatio="true" />
          <VBox prefHeight="100.0">
