--- a/src/views/searchView.fxml
+++ b/src/views/searchView.fxml
@@ -35,8 +35,11 @@
                                 <Insets left="15.0" />
                             </padding>
                         </Label>
-                        <Region prefHeight="20.0" prefWidth="732.0" />
-                        <Button fx:id="clearCanvasButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton" textFill="WHITE">
+                        <Region prefHeight="20.0" prefWidth="712.0" />
+                        <Button fx:id="refreshButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refreshCanvas" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton">
+                            <tooltip>
+                                <Tooltip text="Refresh canvas" />
+                            </tooltip>
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
