--- a/src/views/searchView.fxml
+++ b/src/views/searchView.fxml
@@ -83,7 +83,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                         </Label>
-                         <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="300.0">
+                         <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0">
                              <children>
    
                                  <Label alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="100.0" text="Name" textAlignment="RIGHT" textFill="#f5f5f5" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.valignment="CENTER">
@@ -155,8 +155,8 @@
                                         <Font name="System Bold" size="14.0" />
                                      </font>
                                   </Label>
-
-                                 <Button fx:id="searchButton" alignment="CENTER" mnemonicParsing="false" onAction="#searchSubmit" prefHeight="28.0" prefWidth="300.0" style="-fx-background-color: #43b480; -fx-cursor: hand;" text="SEARCH" textFill="WHITE" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+      
+                                 <Button fx:id="searchButton" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchSubmit" prefHeight="28.0" prefWidth="280.0" style="-fx-background-color: #43b480; -fx-cursor: hand;" text="SEARCH" textFill="WHITE" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -164,7 +164,7 @@
                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                  </GridPane.margin>
                                  </Button>
-                                  <ChoiceBox fx:id="distance"  prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                  <ChoiceBox fx:id="distance" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                       <items>
                                           <FXCollections fx:factory="observableArrayList">
                                               <String fx:value="any" />
@@ -215,11 +215,35 @@
                                          <Insets bottom="5.0" left="15.0" top="5.0" />
                                      </GridPane.margin>
                                  </ComboBox>
+                              <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" text="Max. price:" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="7">
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding></Label>
+                              <Slider fx:id="maxPriceSlider" blockIncrement="100.0" max="2000.0" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="280.0" showTickLabels="true" value="1000.0" GridPane.columnSpan="2" GridPane.rowIndex="8">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </Slider>
+                              <Label fx:id="maxPriceValueLabel" text="max-price-value" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </GridPane.margin>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                                 <font>
+                                    <Font name="System Bold" size="13.0" />
+                                 </font>
+                              </Label>
 
                              </children>
                              <columnConstraints>
                                  <ColumnConstraints maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                                  <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="175.0" minWidth="175.0" prefWidth="175.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="175.0" minWidth="175.0" prefWidth="175.0" />
                              </columnConstraints>
                              <rowConstraints>
                                  <RowConstraints />
@@ -228,6 +252,11 @@
                                  <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
+                              <RowConstraints />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="18.0" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" />
+                              <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="60.0" />
                               <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
