--- a/src/views/loginView.fxml
+++ b/src/views/loginView.fxml
@@ -15,13 +15,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="1060.0" style="-fx-background-color: #36393f;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane prefHeight="750.0" prefWidth="1060.0" style="-fx-background-color: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, #36393f 0%, #202225 200%);;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
     <children>
-      <HBox alignment="CENTER" prefHeight="650.0" prefWidth="1060.0">
+      <HBox alignment="CENTER" prefHeight="750.0" prefWidth="1060.0">
          <children>
             <GridPane alignment="CENTER" maxWidth="400.0" prefWidth="400.0" AnchorPane.leftAnchor="0.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="200.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="160.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="200.0" />
               </columnConstraints>
               <rowConstraints>
@@ -32,7 +32,7 @@
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
@@ -116,7 +116,7 @@
             
                                 <Separator prefHeight="0.0" prefWidth="355.0" GridPane.columnSpan="2" GridPane.rowIndex="7" />
             
-                    <Label alignment="CENTER" maxWidth="-Infinity" prefHeight="18.0" prefWidth="362.0" text="SQL init" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="8">
+                    <Label alignment="CENTER" maxWidth="-Infinity" prefHeight="18.0" prefWidth="362.0" text="Initialize with a SQL script" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="8">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -142,9 +142,9 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Label alignment="CENTER" layoutX="30.0" layoutY="421.0" maxWidth="-Infinity" prefHeight="18.0" prefWidth="362.0" text="Setup DB connection" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2">
+                  <Label alignment="CENTER" layoutX="30.0" layoutY="421.0" maxWidth="-Infinity" prefHeight="38.0" prefWidth="408.0" text="Setup database credentials" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2">
                      <font>
-                        <Font name="System Bold" size="24.0" />
+                        <Font name="System Bold" size="31.0" />
                      </font>
                   </Label>
                </children>
