--- a/src/views/offerListItem.fxml
+++ b/src/views/offerListItem.fxml
@@ -9,6 +9,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tooltip?>
 <AnchorPane prefHeight="140.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.OfferListItemCtrl">
    <HBox alignment="CENTER_LEFT">
@@ -63,6 +65,11 @@
             <Label text="Description: "/>
             <Label fx:id="description"/>
          </HBox>
+         <Button fx:id="similarButton" onMouseClicked="#findSimilar" text="Similar">
+            <tooltip>
+               <Tooltip text="Find offers with visually similar picture" />
+            </tooltip>
+         </Button>
       </VBox>
    </HBox>
 </AnchorPane>
