--- a/src/views/searchView.fxml
+++ b/src/views/searchView.fxml
@@ -31,6 +31,15 @@
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Button>
+
+                        <Button fx:id="clearFormButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#clearForm" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton">
+                            <tooltip>
+                                <Tooltip text="Clear search form" />
+                            </tooltip>
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                        </Button>
                     </items>
                     <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
