--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,10 @@
     /*-fx-border-color: cyan;*/
 }
 
+.button {
+    -fx-cursor: hand;
+}
+
 .canvasToolBarButton {
     -fx-background-color: transparent;
     -fx-text-fill: #fafafa;
@@ -178,6 +182,39 @@
     -fx-background-image: url("../assets/icons/baseline_cancel_white_36dp.png");
 }
 
+#similarButton {
+    -fx-cursor: hand;
+}
+
+#similarButton:hover {
+    -fx-cursor: hand;
+}
+
+#myOffersBox {
+    -fx-background-color: #36393f;
+    -fx-border-width: 0;
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+}
+
+#myOffersScrollPane {
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+    -fx-background-color: transparent;
+    -fx-border-width: 0;
+}
+
+#myOffersScrollPane > .viewport {
+     -fx-background-color: transparent;
+ }
+
+#newOfferPictureScrollPane > .viewport {
+    -fx-background-color: transparent;
+}
+
+#newOfferPictureScrollPane > .viewport {
+    -fx-background-color: transparent;
+}
 
 .searchResults {
     /*-fx-text-fill: #fafafa;*/
@@ -189,15 +226,16 @@
 
 .resultBox {
     -fx-background-color: #6F7480;
-    -fx-border-color: #DEE8FF;
+    -fx-border-color: #202225;
     -fx-border-width: 1px;
     -fx-border-radius: 3px;
-    -fx-opacity: 0.75;
+    -fx-opacity: 0.8;
+    -fx-text-fill: #fff;
 }
 
 .resultBox:hover {
     -fx-cursor: hand;
-    -fx-opacity: 0.8;
+    -fx-border-color: green;
 }
 
 .resultBox.selectedResult {
@@ -208,12 +246,13 @@
 .searchResultNameLabel {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
+    -fx-text-fill: #fff;
 }
 
 .searchResultTransactionTypeLabel {
-
+    -fx-font-weight: bold;
 }
 
 .searchResultPropertyTypeLabel {
-
+    -fx-font-weight: bold;
 }
